@@ -6,8 +6,8 @@
   <title>Técnica N°29 - Reconquista de Buenos Aires</title>
   <link rel="stylesheet" href="css/stylesIndex.css" />
     <!--la etiqueta base fuerza a que el path base sea éste.
-    Ésta línea es para que funcione en el repositorio, pero la podemos dejar comentada para hacer pruebas locales.
-  <base href="https://tecnica29de6.github.io/tecnica29de6.edu.ar/" />-->
+    Ésta línea es para que funcione en el repositorio, pero la podemos dejar comentada para hacer pruebas locales.-->
+  <base href="https://tecnica29de6.github.io/tecnica29de6.edu.ar/" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="css/stylesGenerales.css">
   
@@ -58,6 +58,13 @@
       <div class="botones-principales">
         <a href="#especialidades" class="boton-primario">Ver Especialidades</a>
         <a href="#contactos" class="boton-secundario">Contactar</a>
+        <li class="dropdown">
+        <a href="#" class="boton-primario">Vistas de prueba <i class="fa-solid fa-caret-down"></i></a>
+        <div class="dropdown-content">
+          <a href="#">Vista 1</a>
+          <a href="#">Vista 2</a>
+          <a href="#">Vista 3</a>
+          <a href="#">Vista 4</a>
       </div>
     </div>
     <div class="imagen-principal">
