@@ -31,3 +31,6 @@ FRAN B
 5/11
 FRAN
 - Agregados estilos generales a las páginas de especialidades + estilos de página de computación
+
+MARCO
+- Se agrego un boton despegable llamdo Vistas de pruebas 
